ui/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: __CI_PROJ_NAME__-__CI_ENVIRONMENT_SLUG__
  namespace: __CI_PROJ_NAME__
  labels:
    app: __CI_ENVIRONMENT_SLUG__
    ref: __CI_ENVIRONMENT_SLUG__
    track: stable
spec:
  replicas: 1
  selector:
    matchLabels:
      app: __CI_ENVIRONMENT_SLUG__
      ref: __CI_ENVIRONMENT_SLUG__
  template:
    metadata:
        annotations:
          ad.datadoghq.com/app.logs: '[{"source": "__CI_PROJECT_NAME__", "service": "__URL__", "log_processing_rules": [{"type": "multi_line", "name": "log_start_with_date", "pattern" : ".*-(0?[1-9]|1[012])-(0?[1-9]|[12][0-9]|3[01])"}]}]'
        labels:
          app: __CI_ENVIRONMENT_SLUG__
          ref: __CI_ENVIRONMENT_SLUG__
          track: stable
    spec:
      imagePullSecrets:
        - name: regsecret
      containers:
      - name: app
        image: gitlab.kaleidobio.com:5005/__CI_PROJECT_NAMESPACE__/__CI_PROJECT_NAME__:__VERSION__
        imagePullPolicy: Always
        ports:
        - containerPort: __SERVER_PORT__
        - name: http
          protocol: TCP
          containerPort: __SERVER_PORT__
