ui/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: __CI_PROJECT_NAME__-__CI_ENVIRONMENT_SLUG__
  namespace: __CI_PROJECT_NAME__
  labels:
    app: __CI_ENVIRONMENT_SLUG__
    ref: __CI_ENVIRONMENT_SLUG__
spec:
  type: ClusterIP
  ports:
    - name: http
      port: __SERVER_PORT__
      protocol: TCP
  selector:
    app: __CI_ENVIRONMENT_SLUG__
    ref: __CI_ENVIRONMENT_SLUG__
